<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuAddActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

        <TextView
            android:id="@+id/menu_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_name_label"
            android:paddingStart="10dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/menu_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/menu_name_label"
            android:gravity="center_horizontal"
            android:hint="@string/menu_add_hint" />

        <TextView
            android:id="@+id/menu_image_label"
            android:text="@string/menu_image_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/menu_name" />

        <ImageView
            android:id="@+id/menu_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@+id/menu_image_label"
            android:background="#d3d3d3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/menu_price_label"
            android:text="@string/menu_price_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/menu_image" />

        <EditText
            android:id="@+id/menu_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:digits="0123456789"
            app:layout_constraintTop_toBottomOf="@+id/menu_price_label"/>

        <TextView
            android:id="@+id/menu_explain_label"
            android:text="@string/menu_explain_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/menu_price" />

        <EditText
            android:id="@+id/menu_explain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="揚げたてｱﾂｱﾂ!!"
            app:layout_constraintTop_toBottomOf="@+id/menu_explain_label" />

        <TextView
            android:id="@+id/center"
            android:layout_width="10dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/menu_explain"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/menu_edit_ok"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="送信"
            app:layout_constraintStart_toEndOf="@+id/center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_explain" />

        <Button
            android:id="@+id/menu_edit_cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="キャンセル"
            app:layout_constraintTop_toBottomOf="@+id/menu_explain"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/center"/>



</androidx.constraintlayout.widget.ConstraintLayout>